--- a/_posts/user_guide_matlab/2015-06-30-matlab-user-guide.html
+++ b/_posts/user_guide_matlab/2015-06-30-matlab-user-guide.html
@@ -226,7 +226,7 @@ language: matlab
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<iframe frameborder="0" seamless="seamless" scrolling="no" src="https://plot.ly/~matlab_user_guide/661.embed"> </iframe>
+<iframe frameborder="0" seamless="seamless" scrolling="no" src="https://plot.ly/~matlab_user_guide/661.embed" width="80%" height="500px"> </iframe>
 </div>
 </div>
 </div>
@@ -406,7 +406,7 @@ language: matlab
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<iframe frameborder="0" seamless="seamless" scrolling="no" src="https://plot.ly/~matlab_user_guide/665/cases-vs-years.embed"> </iframe>
+<iframe frameborder="0" seamless="seamless" scrolling="no" src="https://plot.ly/~matlab_user_guide/665/cases-vs-years.embed" width="80%" height="500px"> </iframe>
 </div>
 </div>
 </div>
