map pages minor layout updates

--- a/_posts/plotly_js/scatter-plot-on-maps/2015-08-15-north-america-percipitation-map.html
+++ b/_posts/plotly_js/scatter-plot-on-maps/2015-08-15-north-america-percipitation-map.html
@@ -5,6 +5,7 @@ language: plotly_js
 suite: scatter-plots-on-maps
 order: 3
 sitemap: false
+arrangement: horizontal
 ---
 Plotly.d3.csv('https://raw.githubusercontent.com/plotly/datasets/master/2015_06_30_precipitation.csv', function(err, rows){
       function unpack(rows, key) {
