3D codepen examples update

--- a/_posts/plotly_js/3d-line/2015-04-09-random-walk.html
+++ b/_posts/plotly_js/3d-line/2015-04-09-random-walk.html
@@ -1,6 +1,6 @@
 ---
 name: 3D Line Plot<br>3D Random Walk
-plot_url: https://plot.ly/~PlotBot/192
+plot_url: https://codepen.io/plotly/embed/jbJYrj/?height=564&theme-id=15263&default-tab=result
 language: plotly_js
 suite: 3d-line
 order: 0
