--- a/_posts/plotly_js/3d-scatter/2015-04-09-simple-3d-scatter.html
+++ b/_posts/plotly_js/3d-scatter/2015-04-09-simple-3d-scatter.html
@@ -1,6 +1,6 @@
 ---
 name: 3D Scatter Plot
-plot_url: https://plot.ly/~PlotBot/191
+plot_url: https://codepen.io/plotly/embed/XmGVdd/?height=554&theme-id=15263&default-tab=result
 language: plotly_js
 suite: 3d-scatter
 order: 0
