--- a/_posts/2015-04-05-plotly_js-index.html
+++ b/_posts/2015-04-05-plotly_js-index.html
@@ -12,6 +12,7 @@ redirect_from: /javascript-graphing-library/
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <!-- Icon -->
+<link href="//fonts.googleapis.com/css?family=Open+Sans:600,400,300,200|Inconsolata|Ubuntu+Mono:400,700" rel="stylesheet" type="text/css">
 <link rel="shortcut icon" href="{{site.staticurl}}/images/plotly-ico.png" type="image/x-icon" />
 
 <!-- META TAGS -->
@@ -55,8 +56,8 @@ redirect_from: /javascript-graphing-library/
   "></div>
 
   <div class="js-splash--banner-container">
-    <div class="js-splash--banner-title" style="font-size: 5rem; margin-top: 0; margin-bottom: 2rem; font-weight: 300; ">plotly.js</div>
-    <div class="js-splash--banner-subtitle" style="font-size: 2.2rem; letter-spacing: 0.3px; font-weight: 100;   margin-top: 0; margin-bottom: 2rem; font-weight: 300;">The open source JavaScript graphing library that powers plotly</div>
+    <div class="js-splash--banner-title" style="font-size: 5rem; margin-top: 0; margin-bottom: 2rem; font-weight: 300; font-family:'Open sans',verdana,arial,sans-serif;">plotly.js</div>
+    <div class="js-splash--banner-subtitle" style="font-size: 2.2rem; letter-spacing: 0.3px; font-weight: 100;  margin-top: 0; margin-bottom: 2rem; font-weight: 300; font-family:'Open sans',verdana,arial,sans-serif;">The open source JavaScript graphing library that powers plotly</div>
     <iframe src="https://ghbtns.com/github-btn.html?user=plotly&repo=plotly.js&type=star&count=true&size=large" frameborder="0" scrolling="0" width="160px" height="30px"></iframe>
   </div>
 </div>
@@ -459,10 +460,11 @@ $(function() {
 	{% assign languagelist = site.posts | where:"page_type":"example_index" | where:"language","plotly_js" %}
 
 	{% include documentation_eg.html %}
-  <div class="sponsor">Distribution powered by</div>
-  <a target="_blank" href="https://www.fastly.com/"><img src="https://www.fastly.com/sites/default/files/fastly_logo.png" alt="Fastly"></a>
 
 </div>
+
+<div class="sponsor">Distribution powered by</div>
+<a target="_blank" href="https://www.fastly.com/"><img src="https://www.fastly.com/sites/default/files/fastly_logo.png" alt="Fastly"></a>
 
 {% include footer.html %}
 
