3d and bubble map js updates

--- a/_posts/plotly_js/3d-cluster/2015-08-10-3d-point-cluster.html
+++ b/_posts/plotly_js/3d-cluster/2015-08-10-3d-point-cluster.html
@@ -5,6 +5,7 @@ language: plotly_js
 suite: 3d-cluster
 order: 0
 sitemap: false
+arrangement: horizontal
 ---
 Plotly.d3.csv('https://raw.githubusercontent.com/plotly/datasets/master/alpha_shape.csv', function(err, rows){
 
