--- a/_posts/plotly_js/3d-surface/2015-04-09-elevations-3d-surface.html
+++ b/_posts/plotly_js/3d-surface/2015-04-09-elevations-3d-surface.html
@@ -1,10 +1,11 @@
 ---
 name: Topographical 3D Surface Plot
-plot_url: https://codepen.io/plotly/embed/MaxrwW/?height=581&theme-id=15263&default-tab=result
+plot_url: https://codepen.io/plotly/embed/MaxrwW/?height=601&theme-id=15263&default-tab=result
 language: plotly_js
 suite: 3d-surface
 order: 0
 sitemap: false
+arrangement: horizontal
 ---
 var data = [
   {
