--- a/_posts/python/3d-wireframe/2015-08-21-wireframe-index.html
+++ b/_posts/python/3d-wireframe/2015-08-21-wireframe-index.html
@@ -4,7 +4,7 @@ name: Wireframe Plots
 permalink: python/3d-wireframe-plots/
 description: How to make wireframe plots in Python.
 layout: base
-thumbnail: thumbnail/wireframe.jpg
+thumbnail: thumbnail/wireframes.jpg
 language: python
 page_type: example_index
 has_thumbnail: true
