--- a/_posts/r/callbacks-buttons/2015-04-09-buttons_index.html
+++ b/_posts/r/callbacks-buttons/2015-04-09-buttons_index.html
@@ -4,7 +4,7 @@ name: Button Events
 permalink: r/custom-buttons/
 description: How to bind callback functions to custom buttons in Python charts with JavaScript. 
 layout: base
-thumbnail: /images/custom-buttons.png
+thumbnail: thumbnail/custom-buttons.jpg
 language: r
 page_type: example_index
 has_thumbnail: true
