--- a/_posts/r/callbacks-click/2015-04-09-click_index.html
+++ b/_posts/r/callbacks-click/2015-04-09-click_index.html
@@ -4,7 +4,7 @@ name: Click Events
 permalink: r/click-events/
 description: How to bind callback functions to click events in Python charts with JavaScript. 
 layout: base
-thumbnail: /images/click.png
+thumbnail: thumbnail/click.jpg
 language: r
 page_type: example_index
 has_thumbnail: true
