--- a/_posts/r/dashboard/2015-07-29-dashboard-index.html
+++ b/_posts/r/dashboard/2015-07-29-dashboard-index.html
@@ -5,7 +5,7 @@ permalink: r/dashboard/
 description: Dashboard of charts created and updated in R, rendered with D3.js
 imageurl: https://plot.ly/gh-pages/documentation/static//images/dashboard.png
 language: r
-thumbnail: /images/dashboard.png
+thumbnail: thumbnail/dashboard.jpg
 page_type: example_index
 has_thumbnail: true
 display_as: chart_type
