Added CDN images for Node JS examples

--- a/_posts/nodejs/3d-surface/2015-04-09-3d-surface_node_js_index.html
+++ b/_posts/nodejs/3d-surface/2015-04-09-3d-surface_node_js_index.html
@@ -4,7 +4,7 @@ name: 3D Surface Plots
 permalink: nodejs/3d-surface-plots//
 description: How to make 3D surface plots in nodejs.
 layout: base
-thumbnail: /images/3d-surface.png
+thumbnail: thumbnail/3d-surface.jpg
 language: nodejs
 page_type: example_index
 has_thumbnail: true
