--- a/_posts/nodejs/axes/2015-04-09-axes_node_js_index.html
+++ b/_posts/nodejs/axes/2015-04-09-axes_node_js_index.html
@@ -4,7 +4,7 @@ name: Axes
 permalink: nodejs/axes//
 description: How to adjust axes properties in nodejs. Seven examples of linear and logarithmic axes, axes titles, and styling and coloring axes and grid lines.
 layout: base
-thumbnail: /images/axes.png
+thumbnail: thumbnail/axes.jpg
 language: nodejs
 page_type: example_index
 has_thumbnail: false
