--- a/_posts/nodejs/box/2015-04-09-box_node_js_index.html
+++ b/_posts/nodejs/box/2015-04-09-box_node_js_index.html
@@ -4,7 +4,7 @@ name: Box Plots
 permalink: nodejs/box-plots//
 description: How to make a box plot in nodejs. Seven examples of box plots in nodejs that are grouped, colored, and display the underlying data distribution.
 layout: base
-thumbnail: /images/box.png
+thumbnail: thumbnail/box.jpg
 language: nodejs
 page_type: example_index
 has_thumbnail: true
