--- a/_posts/nodejs/fileopt/2015-04-09-fileopt_node_js_index.html
+++ b/_posts/nodejs/fileopt/2015-04-09-fileopt_node_js_index.html
@@ -5,7 +5,7 @@ permalink: nodejs/file-options/
 redirect_to: https://github.com/plotly/plotly-nodejs#var-stream--plotlystreamtoken-callback
 description: How to manage your files in nodejs with the fileopt parameter.
 layout: base
-thumbnail: /images/fileopt.png
+thumbnail: thumbnail/fileopt.jpg
 language: nodejs
 page_type: example_index
 has_thumbnail: false
