--- a/_posts/nodejs/font/2015-04-09-font_node_js_index.html
+++ b/_posts/nodejs/font/2015-04-09-font_node_js_index.html
@@ -4,7 +4,7 @@ name: Text and Font Styling
 permalink: nodejs/font//
 description: How to edit and style the font of graphs in nodejs.
 layout: base
-thumbnail: /images/font.png
+thumbnail: thumbnail/font.jpg
 language: nodejs
 page_type: example_index
 has_thumbnail: false
