--- a/_posts/nodejs/insets/2015-04-09-insets_node_js_index.html
+++ b/_posts/nodejs/insets/2015-04-09-insets_node_js_index.html
@@ -4,7 +4,7 @@ name: Inset Plots
 permalink: nodejs/insets//
 description: How to make an inset graph in nodejs.
 layout: base
-thumbnail: /images/insets.png
+thumbnail: thumbnail/insets.jpg
 language: nodejs
 page_type: example_index
 has_thumbnail: true
