--- a/_posts/nodejs/latex/2015-04-09-latex_node_js_index.html
+++ b/_posts/nodejs/latex/2015-04-09-latex_node_js_index.html
@@ -4,7 +4,7 @@ name: LaTeX
 permalink: nodejs/LaTeX//
 description: How to add LaTeX to nodejs graphs.
 layout: base
-thumbnail: /images/latex.png
+thumbnail: thumbnail/latex.jpg
 language: nodejs
 page_type: example_index
 has_thumbnail: false
