--- a/_posts/nodejs/polar/2015-04-09-polar_node_js_index.html
+++ b/_posts/nodejs/polar/2015-04-09-polar_node_js_index.html
@@ -4,7 +4,7 @@ name: Polar Charts
 permalink: nodejs/polar-chart//
 description: How to graph polar charts in nodejs. Seven examples of polar line, polar scatter and polar area charts.
 layout: base
-thumbnail: /images/polar.png
+thumbnail: thumbnail/polar.jpg
 language: nodejs
 page_type: example_index
 has_thumbnail: true
