--- a/_posts/nodejs/privacy/2015-04-09-privacy_node_js_index.html
+++ b/_posts/nodejs/privacy/2015-04-09-privacy_node_js_index.html
@@ -4,7 +4,7 @@ name: Public vs Private Graphs
 permalink: nodejs/privacy//
 description: How to set the privacy settings of plotly graphs in nodejs.
 layout: base
-thumbnail: /images/privacy.png
+thumbnail: thumbnail/privacy.jpg
 language: nodejs
 page_type: example_index
 has_thumbnail: false
