--- a/_posts/nodejs/sizing/2015-04-09-sizing_node_js_index.html
+++ b/_posts/nodejs/sizing/2015-04-09-sizing_node_js_index.html
@@ -4,7 +4,7 @@ name: Setting Graph Size
 permalink: nodejs/setting-graph-size//
 description: How to change the size of graphs in nodejs.
 layout: base
-thumbnail: /images/sizing.png
+thumbnail: thumbnail/sizing.jpg
 language: nodejs
 page_type: example_index
 has_thumbnail: false
