--- a/_posts/nodejs/3d-scatter/2015-04-09-3d-scatter_node_js_index.html
+++ b/_posts/nodejs/3d-scatter/2015-04-09-3d-scatter_node_js_index.html
@@ -4,7 +4,7 @@ name: 3D Scatter Plots
 permalink: nodejs/3d-scatter-plots//
 description: How to make 3D scatter plots in nodejs.
 layout: base
-thumbnail: /images/3d-scatter.png
+thumbnail: thumbnail/3d-scatter.jpg
 language: nodejs
 page_type: example_index
 has_thumbnail: true
