--- a/_posts/nodejs/annotations/2015-04-09-annotations_node_js_index.html
+++ b/_posts/nodejs/annotations/2015-04-09-annotations_node_js_index.html
@@ -4,7 +4,7 @@ name: Text and Annotations
 permalink: nodejs/text-and-annotations//
 description: How to add text labels and annotations to plots in nodejs.
 layout: base
-thumbnail: /images/annotations.png
+thumbnail: thumbnail/annotations.jpg
 language: nodejs
 page_type: example_index
 has_thumbnail: false
