--- a/_posts/nodejs/bubble/2015-04-09-bubble_node_js_index.html
+++ b/_posts/nodejs/bubble/2015-04-09-bubble_node_js_index.html
@@ -4,7 +4,7 @@ name: Bubble Charts
 permalink: nodejs/bubble-charts//
 description: How to make a bubble chart in nodejs. Examples of scatter charts whose markers have variable color, size, and symbols.
 layout: base
-thumbnail: /images/bubble.png
+thumbnail: thumbnail/bubble.jpg
 language: nodejs
 page_type: example_index
 has_thumbnail: true
