--- a/_posts/nodejs/error-bar/2015-04-09-error-bar_node_js_index.html
+++ b/_posts/nodejs/error-bar/2015-04-09-error-bar_node_js_index.html
@@ -4,7 +4,7 @@ name: Error Bars
 permalink: nodejs/error-bars//
 description: How to add error bars to a line, scatter, or bar chart. Seven examples of symmetric, asymmetric, horizontal, and colored error bars.
 layout: base
-thumbnail: /images/error-bar.png
+thumbnail: thumbnail/error-bar.jpg
 language: nodejs
 page_type: example_index
 has_thumbnail: true
