--- a/_posts/nodejs/get-requests/2015-04-09-get-requests_node_js_index.html
+++ b/_posts/nodejs/get-requests/2015-04-09-get-requests_node_js_index.html
@@ -4,7 +4,7 @@ name: Get Requests
 permalink: nodejs/get-requests//
 description: How to download plotly users's public graphs and data with nodejs.
 layout: base
-thumbnail: /images/get-requests.png
+thumbnail: thumbnail/get-requests.jpg
 language: nodejs
 page_type: example_index
 has_thumbnail: false
