--- a/_posts/nodejs/heatmap/2015-04-09-heatmap_node_js_index.html
+++ b/_posts/nodejs/heatmap/2015-04-09-heatmap_node_js_index.html
@@ -4,7 +4,7 @@ name: Heatmaps
 permalink: nodejs/heatmaps//
 description: How to make a heatmap in nodejs with a matrix. Seven examples of colored and labeled heatmaps with custom colorscales.
 layout: base
-thumbnail: /images/heatmap.png
+thumbnail: thumbnail/heatmap.jpg
 language: nodejs
 page_type: example_index
 has_thumbnail: true
