--- a/_posts/nodejs/histogram/2015-04-09-histogram_node_js_index.html
+++ b/_posts/nodejs/histogram/2015-04-09-histogram_node_js_index.html
@@ -4,7 +4,7 @@ name: Histograms
 permalink: nodejs/histograms//
 description: How to make a histogram in nodejs. Seven examples of colored, horizontal, and normal histogram bar charts.
 layout: base
-thumbnail: /images/histogram.png
+thumbnail: thumbnail/histogram.jpg
 language: nodejs
 page_type: example_index
 has_thumbnail: true
