--- a/_posts/nodejs/histogram2d/2015-04-09-histogram2d_node_js_index.html
+++ b/_posts/nodejs/histogram2d/2015-04-09-histogram2d_node_js_index.html
@@ -4,7 +4,7 @@ name: 2D Histograms
 permalink: nodejs/2D-Histogram//
 description: How to make a 2D histogram in nodejs. A 2D histogram is a visualization of a bivariate distribution.
 layout: base
-thumbnail: /images/histogram2d.png
+thumbnail: thumbnail/histogram2d.jpg
 language: nodejs
 page_type: example_index
 has_thumbnail: true
