--- a/_posts/nodejs/labels/2015-04-09-labels_node_js_index.html
+++ b/_posts/nodejs/labels/2015-04-09-labels_node_js_index.html
@@ -4,7 +4,7 @@ name: Setting the Title, Legend Entries, and Axis Titles
 permalink: nodejs/figure-labels//
 description: How to set the title, legend-entries, and axis-titles in nodejs.
 layout: base
-thumbnail: /images/labels.png
+thumbnail: thumbnail/labels.jpg
 language: nodejs
 page_type: example_index
 has_thumbnail: false
