--- a/_posts/nodejs/legends/2015-04-09-legends_node_js_index.html
+++ b/_posts/nodejs/legends/2015-04-09-legends_node_js_index.html
@@ -4,7 +4,7 @@ name: Legends
 permalink: nodejs/legend//
 description: How to modify the legend in nodejs graphs. Seven examples of how to move, color, and hide the legend.
 layout: base
-thumbnail: /images/legends.png
+thumbnail: thumbnail/legends.jpg
 language: nodejs
 page_type: example_index
 has_thumbnail: false
