--- a/_posts/nodejs/mixed/2015-04-09-mixed_node_js_index.html
+++ b/_posts/nodejs/mixed/2015-04-09-mixed_node_js_index.html
@@ -4,7 +4,7 @@ name: Multiple Chart Types
 permalink: nodejs/graphing-multiple-chart-types//
 description: How to design figures with multiple chart types in nodejs. An example of a contour plot with a scatter plot and a bar chart with a line chart.
 layout: base
-thumbnail: /images/mixed.png
+thumbnail: thumbnail/mixed.jpg
 language: nodejs
 page_type: example_index
 has_thumbnail: true
