--- a/_posts/nodejs/multiple-axes/2015-04-09-multiple-axes_node_js_index.html
+++ b/_posts/nodejs/multiple-axes/2015-04-09-multiple-axes_node_js_index.html
@@ -4,7 +4,7 @@ name: Multiple Axes
 permalink: nodejs/multiple-axes//
 description: How to make a graph with multiple axes in nodejs.
 layout: base
-thumbnail: /images/multiple-axes.png
+thumbnail: thumbnail/multiple-axes.jpg
 language: nodejs
 page_type: example_index
 has_thumbnail: true
