Added CDN links for Julia examples

--- a/_posts/julia/3d-scatter/2015-04-09-3d-scatter_julia_index.html
+++ b/_posts/julia/3d-scatter/2015-04-09-3d-scatter_julia_index.html
@@ -4,7 +4,7 @@ name: 3D Scatter Plots
 permalink: julia/3d-scatter-plots/
 description: How to make 3D scatter plots in julia.
 layout: base
-thumbnail: /images/3d-scatter.png
+thumbnail: thumbnail/3d-scatter.jpg
 language: julia
 page_type: example_index
 has_thumbnail: true
