--- a/_posts/julia/annotations/2015-04-09-annotations_julia_index.html
+++ b/_posts/julia/annotations/2015-04-09-annotations_julia_index.html
@@ -4,7 +4,7 @@ name: Text and Annotations
 permalink: julia/text-and-annotations/
 description: How to add text labels and annotations to plots in julia.
 layout: base
-thumbnail: /images/annotations.png
+thumbnail: thumbnail/annotations.jpg
 language: julia
 page_type: example_index
 has_thumbnail: false
