--- a/_posts/julia/bar/2015-04-09-bar_julia_index.html
+++ b/_posts/julia/bar/2015-04-09-bar_julia_index.html
@@ -4,7 +4,7 @@ name: Bar Charts
 permalink: julia/bar-charts/
 description: How to make a bar chart in julia. Seven examples of grouped, stacked, overlaid, and colored bar charts.
 layout: base
-thumbnail: /images/bar.png
+thumbnail: thumbnail/bar.jpg
 language: julia
 page_type: example_index
 has_thumbnail: true
