--- a/_posts/julia/fileopt/2015-04-09-fileopt_julia_index.html
+++ b/_posts/julia/fileopt/2015-04-09-fileopt_julia_index.html
@@ -4,7 +4,7 @@ name: Filenames, Folders, and Updating Plotly Graphs in Julia
 permalink: julia/file-options/
 description: How to update Plotly graphs in Julia with the fileopt and filename parameter.
 layout: base
-thumbnail: /images/fileopt.png
+thumbnail: thumbnail/fileopt.jpg
 language: julia
 page_type: example_index
 has_thumbnail: false
