--- a/_posts/julia/insets/2015-04-09-insets_julia_index.html
+++ b/_posts/julia/insets/2015-04-09-insets_julia_index.html
@@ -4,7 +4,7 @@ name: Inset Plots
 permalink: julia/insets/
 description: How to make an inset graph in julia.
 layout: base
-thumbnail: /images/insets.png
+thumbnail: thumbnail/insets.jpg
 language: julia
 page_type: example_index
 has_thumbnail: true
