--- a/_posts/julia/latex/2015-04-09-latex_julia_index.html
+++ b/_posts/julia/latex/2015-04-09-latex_julia_index.html
@@ -4,7 +4,7 @@ name: LaTeX
 permalink: julia/LaTeX/
 description: How to add LaTeX to julia graphs.
 layout: base
-thumbnail: /images/latex.png
+thumbnail: thumbnail/latex.jpg
 language: julia
 page_type: example_index
 has_thumbnail: false
