--- a/_posts/julia/polar/2015-04-09-polar_julia_index.html
+++ b/_posts/julia/polar/2015-04-09-polar_julia_index.html
@@ -4,7 +4,7 @@ name: Polar Charts
 permalink: julia/polar-chart/
 description: How to graph polar charts in julia. Seven examples of polar line, polar scatter and polar area charts.
 layout: base
-thumbnail: /images/polar.png
+thumbnail: thumbnail/polar.jpg
 language: julia
 page_type: example_index
 has_thumbnail: true
