--- a/_posts/julia/3d-line/2015-04-09-3d-line_julia_index.html
+++ b/_posts/julia/3d-line/2015-04-09-3d-line_julia_index.html
@@ -4,7 +4,7 @@ name: 3D Line Plots
 permalink: julia/3d-line-plots/
 description: How to make 3D line plots in julia.
 layout: base
-thumbnail: /images/3d-line.png
+thumbnail: thumbnail/3d-line.jpg
 language: julia
 page_type: example_index
 has_thumbnail: true
