--- a/_posts/julia/3d-surface/2015-04-09-3d-surface_julia_index.html
+++ b/_posts/julia/3d-surface/2015-04-09-3d-surface_julia_index.html
@@ -4,7 +4,7 @@ name: 3D Surface Plots
 permalink: julia/3d-surface-plots/
 description: How to make 3D surface plots in julia.
 layout: base
-thumbnail: /images/3d-surface.png
+thumbnail: thumbnail/3d-surface.jpg
 language: julia
 page_type: example_index
 has_thumbnail: true
