--- a/_posts/julia/box/2015-04-09-box_julia_index.html
+++ b/_posts/julia/box/2015-04-09-box_julia_index.html
@@ -4,7 +4,7 @@ name: Box Plots
 permalink: julia/box-plots/
 description: How to make a box plot in julia. Seven examples of box plots in julia that are grouped, colored, and display the underlying data distribution.
 layout: base
-thumbnail: /images/box.png
+thumbnail: thumbnail/box.jpg
 language: julia
 page_type: example_index
 has_thumbnail: true
