--- a/_posts/julia/bubble/2015-04-09-bubble_julia_index.html
+++ b/_posts/julia/bubble/2015-04-09-bubble_julia_index.html
@@ -4,7 +4,7 @@ name: Bubble Charts
 permalink: julia/bubble-charts/
 description: How to make a bubble chart in julia. Examples of scatter charts whose markers have variable color, size, and symbols.
 layout: base
-thumbnail: /images/bubble.png
+thumbnail: thumbnail/bubble.jpg
 language: julia
 page_type: example_index
 has_thumbnail: true
