--- a/_posts/julia/contour/2015-04-09-contour_julia_index.html
+++ b/_posts/julia/contour/2015-04-09-contour_julia_index.html
@@ -4,7 +4,7 @@ name: Contour Plots
 permalink: julia/contour-plots/
 description: How to make a contour plot in julia. Seven examples of contour plots of matrices with subplots, custom color-scales, and smoothing.
 layout: base
-thumbnail: /images/contour.png
+thumbnail: thumbnail/contour.jpg
 language: julia
 page_type: example_index
 has_thumbnail: true
