--- a/_posts/julia/font/2015-04-09-font_julia_index.html
+++ b/_posts/julia/font/2015-04-09-font_julia_index.html
@@ -4,7 +4,7 @@ name: Text and Font Styling
 permalink: julia/font/
 description: How to edit and style the font of graphs in julia.
 layout: base
-thumbnail: /images/font.png
+thumbnail: thumbnail/font.jpg
 language: julia
 page_type: example_index
 has_thumbnail: false
