--- a/_posts/julia/heatmap/2015-04-09-heatmap_julia_index.html
+++ b/_posts/julia/heatmap/2015-04-09-heatmap_julia_index.html
@@ -4,7 +4,7 @@ name: Heatmaps
 permalink: julia/heatmaps/
 description: How to make a heatmap in julia with a matrix. Seven examples of colored and labeled heatmaps with custom colorscales.
 layout: base
-thumbnail: /images/heatmap.png
+thumbnail: thumbnail/heatmap.jpg
 language: julia
 page_type: example_index
 has_thumbnail: true
