--- a/_posts/julia/histogram/2015-04-09-histogram_julia_index.html
+++ b/_posts/julia/histogram/2015-04-09-histogram_julia_index.html
@@ -4,7 +4,7 @@ name: Histograms
 permalink: julia/histograms/
 description: How to make a histogram in julia. Seven examples of colored, horizontal, and normal histogram bar charts.
 layout: base
-thumbnail: /images/histogram.png
+thumbnail: thumbnail/histogram.jpg
 language: julia
 page_type: example_index
 has_thumbnail: true
