--- a/_posts/julia/histogram2d/2015-04-09-histogram2d_julia_index.html
+++ b/_posts/julia/histogram2d/2015-04-09-histogram2d_julia_index.html
@@ -4,7 +4,7 @@ name: 2D Histograms
 permalink: julia/2D-Histogram/
 description: How to make a 2D histogram in julia. A 2D histogram is a visualization of a bivariate distribution.
 layout: base
-thumbnail: /images/histogram2d.png
+thumbnail: thumbnail/histogram2d.jpg
 language: julia
 page_type: example_index
 has_thumbnail: true
