--- a/_posts/julia/labels/2015-04-09-labels_julia_index.html
+++ b/_posts/julia/labels/2015-04-09-labels_julia_index.html
@@ -4,7 +4,7 @@ name: Setting the Title, Legend Entries, and Axis Titles
 permalink: julia/figure-labels/
 description: How to set the title, legend-entries, and axis-titles in julia.
 layout: base
-thumbnail: /images/labels.png
+thumbnail: thumbnail/labels.jpg
 language: julia
 page_type: example_index
 has_thumbnail: false
