--- a/_posts/julia/line_and_scatter/2015-04-09-line_and_scatter_julia_index.html
+++ b/_posts/julia/line_and_scatter/2015-04-09-line_and_scatter_julia_index.html
@@ -4,7 +4,7 @@ name: Line and Scatter Plots
 permalink: julia/line-and-scatter/
 description: How to make line and scatter plots in julia. Seven examples of basic and colored line and scatter plots.
 layout: base
-thumbnail: /images/line_and_scatter.png
+thumbnail: thumbnail/line-and-scatter.jpg
 language: julia
 page_type: example_index
 has_thumbnail: true
