--- a/_posts/julia/mixed/2015-04-09-mixed_julia_index.html
+++ b/_posts/julia/mixed/2015-04-09-mixed_julia_index.html
@@ -4,7 +4,7 @@ name: Multiple Chart Types
 permalink: julia/graphing-multiple-chart-types/
 description: How to design figures with multiple chart types in julia. An example of a contour plot with a scatter plot and a bar chart with a line chart.
 layout: base
-thumbnail: /images/mixed.png
+thumbnail: thumbnail/mixed.jpg
 language: julia
 page_type: example_index
 has_thumbnail: true
