--- a/_posts/julia/multiple-axes/2015-04-09-multiple-axes_julia_index.html
+++ b/_posts/julia/multiple-axes/2015-04-09-multiple-axes_julia_index.html
@@ -4,7 +4,7 @@ name: Multiple Axes
 permalink: julia/multiple-axes/
 description: How to make a graph with multiple axes in julia.
 layout: base
-thumbnail: /images/multiple-axes.png
+thumbnail: thumbnail/multiple-axes.jpg
 language: julia
 page_type: example_index
 has_thumbnail: true
