--- a/_posts/julia/sizing/2015-04-09-sizing_julia_index.html
+++ b/_posts/julia/sizing/2015-04-09-sizing_julia_index.html
@@ -4,7 +4,7 @@ name: Setting Graph Size
 permalink: julia/setting-graph-size/
 description: How to change the size of graphs in julia.
 layout: base
-thumbnail: /images/sizing.png
+thumbnail: thumbnail/sizing.jpg
 language: julia
 page_type: example_index
 has_thumbnail: false
