--- a/_posts/julia/subplots/2015-04-09-subplots_julia_index.html
+++ b/_posts/julia/subplots/2015-04-09-subplots_julia_index.html
@@ -4,7 +4,7 @@ name: Subplots
 permalink: julia/subplots/
 description: How to make subplots in julia. Seven examples of stacked, custom-sized, and gridded subplots.
 layout: base
-thumbnail: /images/subplots.png
+thumbnail: thumbnail/subplots.jpg
 language: julia
 page_type: example_index
 has_thumbnail: true
