Added CDN links for ggplot2 examples

--- a/_posts/ggplot2/box/2015-07-14-box_ggplot2_index.html
+++ b/_posts/ggplot2/box/2015-07-14-box_ggplot2_index.html
@@ -4,7 +4,7 @@ name: geom_boxplot
 permalink: ggplot2/box-plots/
 description: How to make a box plot in ggplot2. Examples of box plots in R that are grouped, colored, and display the underlying data distribution.
 layout: base
-thumbnail: /images/box.png
+thumbnail: thumbnail/box.jpg
 language: ggplot2
 page_type: example_index
 has_thumbnail: true
