--- a/_posts/ggplot2/errobar/2015-08-25-errorbar_index.html
+++ b/_posts/ggplot2/errobar/2015-08-25-errorbar_index.html
@@ -4,7 +4,7 @@ name: geom_errorbar
 permalink: ggplot2/geom_errorbar/
 description: Examples of geom_errobar in R and ggplot2
 layout: base
-thumbnail: /images/error-bar.png
+thumbnail: thumbnail/error-bar.jpg
 language: ggplot2
 page_type: example_index
 has_thumbnail: true
