--- a/_posts/ggplot2/geom_histogram/2015-04-09-histogram_ggplot2_index.html
+++ b/_posts/ggplot2/geom_histogram/2015-04-09-histogram_ggplot2_index.html
@@ -4,7 +4,7 @@ name: geom_histogram
 permalink: ggplot2/geom_histogram/
 description: How to make a histogram in ggplot2. Examples and tutorials for plotting histograms with geom_histogram, geom_density and stat_density.
 layout: base
-thumbnail: /images/histogram.png
+thumbnail: thumbnail/histogram.jpg
 language: ggplot2
 page_type: example_index
 has_thumbnail: true
