--- a/_posts/ggplot2/geom_ribbon/2015-04-09-ribbon_index.html
+++ b/_posts/ggplot2/geom_ribbon/2015-04-09-ribbon_index.html
@@ -4,7 +4,7 @@ name: geom_ribbon
 permalink: ggplot2/geom_ribbon/
 description: How to make plots with geom_ribbon in ggplot2 and R.
 layout: base
-thumbnail: images/geom_ribbon.png
+thumbnail: thumbnail/geom_ribbon.jpg
 language: ggplot2
 page_type: example_index
 has_thumbnail: true
