--- a/_posts/ggplot2/hover/2015-08-20-hover_index.html
+++ b/_posts/ggplot2/hover/2015-08-20-hover_index.html
@@ -4,7 +4,7 @@ name: interactive tooltip
 permalink: ggplot2/interactive-tooltip/
 description: How to add custom tooltip effects to R and ggplot2 charts with JavaScript. 
 layout: base
-thumbnail: /images/hover.png
+thumbnail: thumbnail/hover.jpg
 language: ggplot2
 page_type: example_index
 has_thumbnail: true
