--- a/_posts/ggplot2/geom_abline/2015-07-16-geom_abline_index.html
+++ b/_posts/ggplot2/geom_abline/2015-07-16-geom_abline_index.html
@@ -4,7 +4,7 @@ name: geom_abline
 permalink: ggplot2/geom_abline/
 description: How to use the abline geom in ggplot2 online to add a line with specified slope and intercept to the plot.
 layout: base
-thumbnail: /images/ipython-img/12 - ipython graph email.png
+thumbnail: thumbnail/ipython_graph_email.jpg
 language: ggplot2
 page_type: example_index
 has_thumbnail: true
