--- a/_posts/ggplot2/geom_bar/2015-07-14-geom_bar_ggplot2_index.html
+++ b/_posts/ggplot2/geom_bar/2015-07-14-geom_bar_ggplot2_index.html
@@ -4,7 +4,7 @@ name: geom_bar
 permalink: ggplot2/geom_bar/
 description: How to make a bar chart in ggplot2 using geom_bar. Examples of grouped, stacked, overlaid, filled, and colored bar charts.
 layout: base
-thumbnail: /images/bar.png
+thumbnail: thumbnail/bar.jpg
 language: ggplot2
 page_type: example_index
 has_thumbnail: true
