--- a/_posts/ggplot2/geom_line/2015-07-17-geom_line_ggplot2_index.html
+++ b/_posts/ggplot2/geom_line/2015-07-17-geom_line_ggplot2_index.html
@@ -4,7 +4,7 @@ name: geom_line
 permalink: ggplot2/geom_line/
 description: How to make line plots in ggplot2 with geom_line. Examples with code and interactive charts
 layout: base
-thumbnail: /images/line_shapes.png
+thumbnail: thumbnail/line_shapes.jpg
 language: ggplot2
 page_type: example_index
 has_thumbnail: true
