--- a/_posts/ggplot2/geom_point/2015-07-13-geom_point_ggplot2_index.html
+++ b/_posts/ggplot2/geom_point/2015-07-13-geom_point_ggplot2_index.html
@@ -4,7 +4,7 @@ name: geom_point
 permalink: ggplot2/geom_point/
 description: How to make a scatter chart in ggplot2. Examples of scatter charts and line charts with fits and regressions.
 layout: base
-thumbnail: /images/gg-themes.png
+thumbnail: thumbnail/gg-themes.jpg
 language: ggplot2
 page_type: example_index
 has_thumbnail: true
