--- a/_posts/ggplot2/geom_polygon/2015-04-09-geom_polygon_ggplot2_index.html
+++ b/_posts/ggplot2/geom_polygon/2015-04-09-geom_polygon_ggplot2_index.html
@@ -4,7 +4,7 @@ name: geom_polygon
 permalink: ggplot2/geom_polygon/
 description: Examples of geom_polygon in R.
 layout: base
-thumbnail: /images/shape.png
+thumbnail: thumbnail/shape.jpg
 language: ggplot2
 page_type: example_index
 has_thumbnail: true
