--- a/_posts/ggplot2/geom_smooth/2015-07-14-geom_smooth_ggplot2_index.html
+++ b/_posts/ggplot2/geom_smooth/2015-07-14-geom_smooth_ggplot2_index.html
@@ -4,7 +4,7 @@ name: geom_smooth
 permalink: ggplot2/geom_smooth/
 description: How to add a smoothed line and fit to plots with geom_smmoth in ggplot2 and R.
 layout: base
-thumbnail: /images/line-plots.png
+thumbnail: thumbnail/line-plots.jpg
 language: ggplot2
 page_type: example_index
 has_thumbnail: true
