--- a/_posts/ggplot2/time-series/2015-07-14-time-series_ggplot2_index.html
+++ b/_posts/ggplot2/time-series/2015-07-14-time-series_ggplot2_index.html
@@ -4,7 +4,7 @@ name: scale_x_date
 permalink: ggplot2/scale_x_date/
 description: How to make plots in R and ggplot2 using scale_x_date.
 layout: base
-thumbnail: /images/time-series.png
+thumbnail: thumbnail/time-series.jpg
 language: ggplot2
 page_type: example_index
 has_thumbnail: true
