--- a/_posts/ggplot2/yscale/2015-07-20-log_scale_index.html
+++ b/_posts/ggplot2/yscale/2015-07-20-log_scale_index.html
@@ -4,7 +4,7 @@ name: scale_y_continuous
 permalink: ggplot2/scale_y_continuous/
 description: How to use logarithmic scales with ggplot2 axes.
 layout: base
-thumbnail: /images/log.png
+thumbnail: thumbnail/log.jpg
 language: ggplot2
 page_type: example_index
 has_thumbnail: true
