Added CDN links for pandas examples

--- a/_posts/pandas/3d-clusters/2015-07-16-3d-clusters-index.html
+++ b/_posts/pandas/3d-clusters/2015-07-16-3d-clusters-index.html
@@ -4,7 +4,7 @@ name: 3d Point Clustering
 permalink: pandas/3d-point-clustering/
 description: How to cluster points in 3d with alpha shaphes in Pandas and Plotly
 layout: base
-thumbnail: /images/3d-clusters.png
+thumbnail: thumbnail/3d-clusters.jpg
 language: pandas
 page_type: example_index
 has_thumbnail: true
