--- a/_posts/pandas/axvspan/2015-06-17-0A-axvspan_pandas_index.html
+++ b/_posts/pandas/axvspan/2015-06-17-0A-axvspan_pandas_index.html
@@ -4,7 +4,7 @@ name: Axvspan, Axvline, Axhline
 permalink: pandas/axvspan-axvline-axhline/
 description: How to make axvspan, axvline, and axhline in Pandas. 
 layout: base
-thumbnail: /images/axvspan.png
+thumbnail: thumbnail/axvspan.jpg
 language: pandas
 page_type: example_index
 has_thumbnail: true
