--- a/_posts/pandas/bar/2015-04-09-0A-bar_pandas_index.html
+++ b/_posts/pandas/bar/2015-04-09-0A-bar_pandas_index.html
@@ -4,7 +4,7 @@ name: Bar Charts
 permalink: pandas/bar-charts/
 description: How to make a bar chart in pandas. Seven examples of grouped, stacked, overlaid, and colored bar charts.
 layout: base
-thumbnail: /images/bar.png
+thumbnail: thumbnail/bar.jpg
 language: pandas
 page_type: example_index
 has_thumbnail: true
