--- a/_posts/pandas/callbacks-hover/2015-04-09-hover_index.html
+++ b/_posts/pandas/callbacks-hover/2015-04-09-hover_index.html
@@ -4,7 +4,7 @@ name: Hover Events
 permalink: pandas/hover-events/
 description: How to add custom hover effects to Pandas charts with JavaScript. 
 layout: base
-thumbnail: /images/hover.png
+thumbnail: thumbnail/hover.jpg
 language: pandas
 page_type: example_index
 has_thumbnail: true
