--- a/_posts/pandas/choropleth-maps/2015-06-29-choropleth_python_index.html
+++ b/_posts/pandas/choropleth-maps/2015-06-29-choropleth_python_index.html
@@ -4,7 +4,7 @@ name: Choropleth Maps
 permalink: pandas/choropleth-maps/
 description: How to make a choropleth map in Pandas. A choropleth map shades geographic regions by value.
 layout: base
-thumbnail: /images/choropleth.png
+thumbnail: thumbnail/choropleth.jpg
 language: pandas
 page_type: example_index
 has_thumbnail: true
