--- a/_posts/pandas/density-plots/2015-04-09-density-plots-index.html
+++ b/_posts/pandas/density-plots/2015-04-09-density-plots-index.html
@@ -4,7 +4,7 @@ name: 2d Density Plots
 permalink: pandas/2d-density-plots/
 description: How to make a 2d density plot in pandas. Examples of density plots with kernel density estimations, custom color-scales, and smoothing.
 layout: base
-thumbnail: /images/2d-density-plot.png
+thumbnail: thumbnail/2d-density-plot.jpg
 language: pandas
 page_type: example_index
 has_thumbnail: true
