--- a/_posts/pandas/fileopt/2015-04-09-fileopt_python_index.html
+++ b/_posts/pandas/fileopt/2015-04-09-fileopt_python_index.html
@@ -4,7 +4,7 @@ name: Filenames, Folders, and Updating Plotly Graphs
 permalink: pandas/file-options/
 description: How to update your graphs in Pandas with the fileopt parameter.
 layout: base
-thumbnail: /images/fileopt.png
+thumbnail: thumbnail/fileopt.jpg
 language: pandas
 page_type: example_index
 has_thumbnail: false
