--- a/_posts/pandas/finance/2015-06-30-candlestick-charts.html
+++ b/_posts/pandas/finance/2015-06-30-candlestick-charts.html
@@ -3,7 +3,7 @@ permalink: pandas/candlestick-charts
 description: How to make interactive candlestick charts in Python with Plotly. Six examples of candlestick charts with Pandas, time series, and yahoo finance data.
 name: Candlestick Charts
 has_thumbnail: true
-thumbnail: /images/candlestick.png
+thumbnail: thumbnail/candlestick.jpg
 layout: user-guide
 language: pandas
 title: Python Candlestick Charts | plotly
