--- a/_posts/pandas/financial_analysis/2015-06-30-bollinger_bands.html
+++ b/_posts/pandas/financial_analysis/2015-06-30-bollinger_bands.html
@@ -3,7 +3,7 @@ permalink: pandas/bollinger-bands
 description: Bollinger Bands in Pandas and Cufflinks.
 name: Bollinger Bands
 has_thumbnail: true
-thumbnail: /images/bolbands.png
+thumbnail: thumbnail/bolbands.jpg
 layout: user-guide
 language: pandas
 title: Bollinger Bands in Pandas | plotly
