--- a/_posts/pandas/financial_analysis/2015-06-30-moving_average_convergence_divergence.html
+++ b/_posts/pandas/financial_analysis/2015-06-30-moving_average_convergence_divergence.html
@@ -3,7 +3,7 @@ permalink: pandas/moving-average-convergence-divergence
 description: Moving average convergence divergence in Pandas and Cufflinks.
 name: Moving Average Convergence Divergence
 has_thumbnail: true
-thumbnail: /images/movingavgcd.png
+thumbnail: thumbnail/movingavgcd.jpg
 layout: user-guide
 language: pandas
 title: Moving Average Convergence Divergence in Pandas | plotly
