--- a/_posts/pandas/financial_analysis/2015-06-30-relative_strength.html
+++ b/_posts/pandas/financial_analysis/2015-06-30-relative_strength.html
@@ -3,7 +3,7 @@ permalink: pandas/relative-strength-index
 description: Moving average convergence divergence in Pandas and Cufflinks.
 name: Relative Strength Index
 has_thumbnail: true
-thumbnail: /images/rel_strength.png
+thumbnail: thumbnail/rel_strength.jpg
 layout: user-guide
 language: pandas
 title: Relative Strength Index in Pandas | plotly
