--- a/_posts/pandas/font/2015-04-09-font_python_index.html
+++ b/_posts/pandas/font/2015-04-09-font_python_index.html
@@ -4,7 +4,7 @@ name: Text and Font Styling
 permalink: pandas/font/
 description: How to edit and style the font of graphs in pandas.
 layout: base
-thumbnail: /images/font.png
+thumbnail: thumbnail/font.jpg
 language: pandas
 page_type: example_index
 has_thumbnail: false
