--- a/_posts/pandas/heatmap/2015-04-09-0A-heatmap_pandas_index.html
+++ b/_posts/pandas/heatmap/2015-04-09-0A-heatmap_pandas_index.html
@@ -4,7 +4,7 @@ name: Heatmaps
 permalink: pandas/heatmaps/
 description: How to make a heatmap in pandas with a matrix. Seven examples of colored and labeled heatmaps with custom colorscales.
 layout: base
-thumbnail: /images/heatmap.png
+thumbnail: thumbnail/heatmap.jpg
 language: pandas
 page_type: example_index
 has_thumbnail: true
