--- a/_posts/pandas/histogram/2015-04-09-0A-histogram_pandas_index.html
+++ b/_posts/pandas/histogram/2015-04-09-0A-histogram_pandas_index.html
@@ -4,7 +4,7 @@ name: Histograms
 permalink: pandas/histograms/
 description: How to make a histogram in pandas. Seven examples of colored, horizontal, and normal histogram bar charts.
 layout: base
-thumbnail: /images/histogram.png
+thumbnail: thumbnail/histogram.jpg
 language: pandas
 page_type: example_index
 has_thumbnail: true
