--- a/_posts/pandas/legends/2015-04-09-legends_python_index.html
+++ b/_posts/pandas/legends/2015-04-09-legends_python_index.html
@@ -4,7 +4,7 @@ name: Legends
 permalink: pandas/legend/
 description: How to modify the legend in pandas graphs. Seven examples of how to move, color, and hide the legend.
 layout: base
-thumbnail: /images/legends.png
+thumbnail: thumbnail/legends.jpg
 language: pandas
 page_type: example_index
 has_thumbnail: false
