--- a/_posts/pandas/map-subplots/2015-07-05-map-subplots.html
+++ b/_posts/pandas/map-subplots/2015-07-05-map-subplots.html
@@ -4,7 +4,7 @@ name: Map Subplots and Small Multiples
 permalink: pandas/map-subplots-and-small-multiples/
 description: How to make map subplots and map small multiples in Pandas.
 layout: base
-thumbnail: /images/map-subplots.png
+thumbnail: thumbnail/map-subplots.jpg
 language: pandas
 page_type: example_index
 has_thumbnail: true
