--- a/_posts/pandas/multiple-axes/2015-06-30-multiple-yaxes.html
+++ b/_posts/pandas/multiple-axes/2015-06-30-multiple-yaxes.html
@@ -3,7 +3,7 @@ permalink: /pandas/multiple-axes
 description: How to create a chart with multiple axes with Pandas in Plotly.
 name: Multiple Axes in Pandas | Examples | plotly
 has_thumbnail: true
-thumbnail: /images/multiple-axes.png
+thumbnail: thumbnail/multiple-axes.jpg
 has_thumbnail: true
 layout: user-guide
 page_type: example_index
