--- a/_posts/pandas/pie/2015-06-30-pie-charts.html
+++ b/_posts/pandas/pie/2015-06-30-pie-charts.html
@@ -3,7 +3,7 @@ permalink: pandas/pie-charts
 description: How to make interactive Pie charts in Cufflinks with Plotly. Two examples of Pie charts with Pandas and Cufflinks.
 name: Pie Charts
 has_thumbnail: true
-thumbnail: /images/pie-chart.png
+thumbnail: thumbnail/pie-chart.jpg
 layout: user-guide
 language: pandas
 title: Pandas Pie Charts | plotly
