--- a/_posts/pandas/polar/2015-04-09-polar_pandas_index.html
+++ b/_posts/pandas/polar/2015-04-09-polar_pandas_index.html
@@ -4,7 +4,7 @@ name: Polar Charts
 permalink: pandas/polar-chart/
 description: How to graph polar charts in pandas. Seven examples of polar line, polar scatter and polar area charts.
 layout: base
-thumbnail: /images/polar-scatter.png
+thumbnail: thumbnail/polar-scatter.jpg
 language: pandas
 page_type: example_index
 has_thumbnail: true
