--- a/_posts/pandas/subplots/2015-06-30-subplots.html
+++ b/_posts/pandas/subplots/2015-06-30-subplots.html
@@ -3,7 +3,7 @@ permalink: /pandas/subplots
 description: How to create a chart with subplots, or small multiples, with Pandas in Python.
 name: Subplots in Pandas | Examples | plotly
 has_thumbnail: true
-thumbnail: /images/subplots.png
+thumbnail: thumbnail/subplots.jpg
 has_thumbnail: true
 layout: user-guide
 page_type: example_index
