--- a/_posts/pandas/time-series/2015-04-09-0A-time-series_pandas_index.html
+++ b/_posts/pandas/time-series/2015-04-09-0A-time-series_pandas_index.html
@@ -4,7 +4,7 @@ name: Time Series
 permalink: pandas/time-series/
 description: How to plot date and time in pandas. An example of a time-series plot.
 layout: base
-thumbnail: /images/time-series.png
+thumbnail: thumbnail/time-series.jpg
 language: pandas
 page_type: example_index
 has_thumbnail: true
