--- a/_posts/pandas/wind-rose/2015-04-09-wind-rose_pandas_index.html
+++ b/_posts/pandas/wind-rose/2015-04-09-wind-rose_pandas_index.html
@@ -4,7 +4,7 @@ name: Wind Rose Charts
 permalink: pandas/wind-rose-charts/
 description: How to graph wind rose charts in Pandas. 
 layout: base
-thumbnail: /images/wind-rose.png
+thumbnail: thumbnail/wind-rose.jpg
 language: pandas
 page_type: example_index
 has_thumbnail: true
