--- a/_posts/pandas/3d-scatter/2015-04-09-3d-scatter_python_index.html
+++ b/_posts/pandas/3d-scatter/2015-04-09-3d-scatter_python_index.html
@@ -4,7 +4,7 @@ name: 3D Scatter Plots
 permalink: pandas/3d-scatter-plots/
 description: How to make 3D scatter plots in pandas.
 layout: base
-thumbnail: /images/3d-scatter.png
+thumbnail: thumbnail/3d-scatter.jpg
 language: pandas
 page_type: example_index
 has_thumbnail: true
