--- a/_posts/pandas/annotations/2015-04-09-annotations_python_index.html
+++ b/_posts/pandas/annotations/2015-04-09-annotations_python_index.html
@@ -4,7 +4,7 @@ name: Text and Annotations
 permalink: pandas/text-and-annotations/
 description: How to add text labels and annotations to plots in pandas.
 layout: base
-thumbnail: /images/annotations.png
+thumbnail: thumbnail/annotations.jpg
 language: pandas
 page_type: example_index
 has_thumbnail: false
