--- a/_posts/pandas/area/2015-04-09-area_pandas_index.html
+++ b/_posts/pandas/area/2015-04-09-area_pandas_index.html
@@ -4,7 +4,7 @@ name: Filled Area Plots
 permalink: pandas/filled-area-plots/
 description: How to make a filled area plot in pandas. An area chart displays a solid color between the traces of a graph.
 layout: base
-thumbnail: /images/area.png
+thumbnail: thumbnail/area.jpg
 language: pandas
 page_type: example_index
 has_thumbnail: true
