--- a/_posts/pandas/box/2015-04-09-0A-box_pandas_index.html
+++ b/_posts/pandas/box/2015-04-09-0A-box_pandas_index.html
@@ -4,7 +4,7 @@ name: Box Plots
 permalink: pandas/box-plots/
 description: How to make a box plot in pandas. Seven examples of box plots in pandas that are grouped, colored, and display the underlying data distribution.
 layout: base
-thumbnail: /images/box.png
+thumbnail: thumbnail/box.jpg
 language: pandas
 page_type: example_index
 has_thumbnail: true
