--- a/_posts/pandas/bubble-maps/2015-06-29-bubble_python_index.html
+++ b/_posts/pandas/bubble-maps/2015-06-29-bubble_python_index.html
@@ -4,7 +4,7 @@ name: Bubble Maps
 permalink: pandas/bubble-maps/
 description: How to make a bubble map in Pandas. A bubble map overlays a bubble chart on a map.
 layout: base
-thumbnail: /images/bubble-map.png
+thumbnail: thumbnail/bubble-map.jpg
 language: pandas
 page_type: example_index
 has_thumbnail: true
