--- a/_posts/pandas/callbacks-click/2015-04-09-click_index.html
+++ b/_posts/pandas/callbacks-click/2015-04-09-click_index.html
@@ -4,7 +4,7 @@ name: Click Events
 permalink: pandas/click-events/
 description: How to bind callback functions to click events in Pandas charts with JavaScript. 
 layout: base
-thumbnail: /images/click.png
+thumbnail: thumbnail/click.jpg
 language: pandas
 page_type: example_index
 has_thumbnail: true
