--- a/_posts/pandas/callbacks-sliders/2015-04-09-sliders_index.html
+++ b/_posts/pandas/callbacks-sliders/2015-04-09-sliders_index.html
@@ -4,7 +4,7 @@ name: Adding Sliders to Charts
 permalink: pandas/range-slider/
 description: How to add sliders to Pandas charts with JavaScript 
 layout: base
-thumbnail: /images/sliders.png
+thumbnail: thumbnail/sliders.jpg
 language: pandas
 page_type: example_index
 has_thumbnail: true
