--- a/_posts/pandas/callbacks-zoom/2015-04-09-zoom_index.html
+++ b/_posts/pandas/callbacks-zoom/2015-04-09-zoom_index.html
@@ -4,7 +4,7 @@ name: Adding Zoom Effects
 permalink: pandas/zoom-events/
 description: How to bind callback functions to zoom events in JavaScript charts. 
 layout: base
-thumbnail: /images/zoom.png
+thumbnail: thumbnail/zoom.jpg
 language: pandas
 page_type: example_index
 has_thumbnail: true
