--- a/_posts/pandas/contour/2015-04-09-contour_pandas_index.html
+++ b/_posts/pandas/contour/2015-04-09-contour_pandas_index.html
@@ -4,7 +4,7 @@ name: Contour Plots
 permalink: pandas/contour-plots/
 description: How to make a contour plot in pandas. Seven examples of contour plots of matrices with subplots, custom color-scales, and smoothing.
 layout: base
-thumbnail: /images/contour.png
+thumbnail: thumbnail/contour.jpg
 language: pandas
 page_type: example_index
 has_thumbnail: true
