--- a/_posts/pandas/histogram2d/2015-04-09-0A-histogram2d_pandas_index.html
+++ b/_posts/pandas/histogram2d/2015-04-09-0A-histogram2d_pandas_index.html
@@ -4,7 +4,7 @@ name: 2D Histograms
 permalink: pandas/2D-Histogram/
 description: How to make a 2D histogram in pandas. A 2D histogram is a visualization of a bivariate distribution.
 layout: base
-thumbnail: /images/histogram2d.png
+thumbnail: thumbnail/histogram2d.jpg
 language: pandas
 page_type: example_index
 has_thumbnail: true
