--- a/_posts/pandas/horizontal-bar/2015-05-20-0A-horizontal_bar_pandas_index.html
+++ b/_posts/pandas/horizontal-bar/2015-05-20-0A-horizontal_bar_pandas_index.html
@@ -4,7 +4,7 @@ name: Horizontal Bar Charts
 permalink: pandas/horizontal-bar-charts/
 description: How to make a hortizontal bar chart in Pandas.
 layout: base
-thumbnail: /images/horizontal-bar.png
+thumbnail: thumbnail/horizontal-bar.jpg
 language: pandas
 page_type: example_index
 has_thumbnail: true
