--- a/_posts/pandas/labels/2015-04-09-labels_python_index.html
+++ b/_posts/pandas/labels/2015-04-09-labels_python_index.html
@@ -4,7 +4,7 @@ name: Setting the Title, Legend Entries, and Axis Titles
 permalink: pandas/figure-labels/
 description: How to set the title, legend-entries, and axis-titles in pandas.
 layout: base
-thumbnail: /images/labels.png
+thumbnail: thumbnail/labels.jpg
 language: pandas
 page_type: example_index
 has_thumbnail: false
