--- a/_posts/pandas/latex/2015-04-09-latex_python_index.html
+++ b/_posts/pandas/latex/2015-04-09-latex_python_index.html
@@ -4,7 +4,7 @@ name: LaTeX
 permalink: pandas/LaTeX/
 description: How to add LaTeX to pandas graphs.
 layout: base
-thumbnail: /images/latex.png
+thumbnail: thumbnail/latex.jpg
 language: pandas
 page_type: example_index
 has_thumbnail: false
