--- a/_posts/pandas/line-plots/2015-05-12-0A-line-plots-index.html
+++ b/_posts/pandas/line-plots/2015-05-12-0A-line-plots-index.html
@@ -4,7 +4,7 @@ name: Line Charts
 permalink: pandas/line-charts/
 description: How to make line charts in Pandas. 
 layout: base
-thumbnail: /images/line-plots.png
+thumbnail: thumbnail/line-plots.jpg
 language: pandas
 page_type: example_index
 has_thumbnail: true
