--- a/_posts/pandas/line_and_scatter/2015-05-19-0A-scatter_pandas_index.html
+++ b/_posts/pandas/line_and_scatter/2015-05-19-0A-scatter_pandas_index.html
@@ -4,7 +4,7 @@ name: Scatter Plots
 permalink: pandas/line-and-scatter/
 description: How to make scatter plots with Pandas dataframes. Seven examples of basic and colored scatter plots.
 layout: base
-thumbnail: /images/line_and_scatter.png
+thumbnail: thumbnail/line-and-scatter.jpg
 language: pandas
 page_type: example_index
 has_thumbnail: true
