--- a/_posts/pandas/lines-on-maps/2015-06-29-lines_on_maps_python_index.html
+++ b/_posts/pandas/lines-on-maps/2015-06-29-lines_on_maps_python_index.html
@@ -4,7 +4,7 @@ name: Lines on Maps
 permalink: pandas/lines-on-maps/
 description: How to draw lines, great circles, and contours on maps in Pandas. Lines on maps can show distance between geographic points or be contour lines (isolines, isopleths, or isarithms).
 layout: base
-thumbnail: /images/flight-paths.png
+thumbnail: thumbnail/flight-paths.jpg
 language: pandas
 page_type: example_index
 has_thumbnail: true
