--- a/_posts/pandas/privacy/2015-04-09-privacy_python_index.html
+++ b/_posts/pandas/privacy/2015-04-09-privacy_python_index.html
@@ -4,7 +4,7 @@ name: Public vs Private Graphs
 permalink: pandas/privacy/
 description: How to set the privacy settings of plotly graphs in pandas.
 layout: base
-thumbnail: /images/privacy.png
+thumbnail: thumbnail/privacy.jpg
 language: pandas
 page_type: example_index
 has_thumbnail: false
