--- a/_posts/pandas/scatter-plot-on-maps/2015-06-29-scatter-plots-on-maps_index.html
+++ b/_posts/pandas/scatter-plot-on-maps/2015-06-29-scatter-plots-on-maps_index.html
@@ -4,7 +4,7 @@ name: Scatter Plots on Maps
 permalink: pandas/scatter-plots-on-maps/
 description: How to make scatter plots on maps in Pandas. Scatter plots on maps highlight geographic areas and can be colored by value.
 layout: base
-thumbnail: /images/scatter-plot-on-maps.png
+thumbnail: thumbnail/scatter-plot-on-maps.jpg
 language: pandas
 page_type: example_index
 has_thumbnail: true
