--- a/_posts/pandas/sizing/2015-04-09-sizing_python_index.html
+++ b/_posts/pandas/sizing/2015-04-09-sizing_python_index.html
@@ -4,7 +4,7 @@ name: Setting Graph Size
 permalink: pandas/setting-graph-size/
 description: How to change the size of graphs in pandas.
 layout: base
-thumbnail: /images/sizing.png
+thumbnail: thumbnail/sizing.jpg
 language: pandas
 page_type: example_index
 has_thumbnail: false
